events and podcast

--- a/views/index.jade
+++ b/views/index.jade
@@ -61,45 +61,50 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/297084807127371/')
-                p Creative Crew June Talks
-                  span on 10 Jun, Tue
-                p.tagline by Creative Crew
-            li
-              a(href='https://www.facebook.com/events/514180752021513')
-                p iOS Dev Scout June Meetup
-                  span on 12 Jun, Thu
-                p.tagline by iOS DevScout
-            li
-              a(href='https://www.facebook.com/events/518584511581520')
-                p REST API best practices
-                  span on 13 Jun, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/184282842/')
-                p Ruby Pair Programming
-                  span on 14 Jun, Sat
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/186094192/')
-                p Become a mentor for NodeSchool Singapore
-                  span on 14 Jun, Sat
-                p.tagline by Singapore JS
-            li
               a(href='http://www.meetup.com/Singapore-JS/events/174971982/')
                 p NodeSchool Singapore
                   span on 15 Jun, Sun
                 p.tagline by Singapore JS
+            li
+              a(href='http://www.meetup.com/Meteor-Singapore/events/187086472/')
+                p SG Meteorites 0.4 - Meteor i18n and Build Plugins Development
+                  span on 16 Jun, Mon
+                p.tagline by Meteor Singapore
             li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/184248862/')
                 p June Meetup
                   span on 17 Jun, Tue
                 p.tagline by Singapore JS
             li
+              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/188030392/')
+                p Code Dojo - Medicine Clash
+                  span on 17 Jun, Tue
+                p.tagline by Software Craftsmanship Singapore
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/166085312/')
+                p R & Hadoop (TBC)
+                  span on 18 Jun, Wed
+                p.tagline by R User Group - Singapore
+            li
+              a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/185826722/')
+                p PUGS Meetup #4
+                  span on 19 Jun, Thu
+                p.tagline by PUGS (Postgres User Group Singapore)
+            li
               a(href='https://www.facebook.com/events/1409045022708727')
                 p Building web apps with Martini-go and Gorm
                   span on 20 Jun, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/1434203866849774/')
+                p A Day with Swift
+                  span on 21 Jun, Sat
+                p.tagline by iOS Dev Scout
+            li
+              a(href='http://www.meetup.com/devops-singapore/events/187246762/')
+                p Meetup #21: EC2 to VPC using Chef
+                  span on 24 Jun, Tue
+                p.tagline by DevOps Singapore
             li
               a(href='https://www.facebook.com/events/504465599653109')
                 p Personal Finance for Hackers (& Painters)
@@ -111,10 +116,30 @@ html(lang='en')
                   span on 28 Jun, Sat
                 p.tagline by DataScience SG
             li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/186629472/')
+                p Rails Girls
+                  span on 28 Jun, Sat
+                p.tagline by Singapore Ruby Group
+            li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525632/')
                 p DataScience SG Meetup
                   span on 28 Jun, Sat
                 p.tagline by DataScience SG
+            li
+              a(href='https://www.facebook.com/events/672712992807376')
+                p Practical Core Data / Building Apple TV Apps
+                  span on 4 Jul, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/1409045022708727')
+                p Building web apps with Martini-go and Gorm
+                  span on 11 Jul, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/518584511581520')
+                p REST API best practices
+                  span on 18 Jul, Fri
+                p.tagline by Hackers and Painters
 
         section
           h3 open source
