--- a/views/index.jade
+++ b/views/index.jade
@@ -61,21 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/174971982/')
-                p NodeSchool Singapore
-                  span on 15 Jun, Sun
-                p.tagline by Singapore JS
-            li
-              a(href='http://www.meetup.com/Meteor-Singapore/events/187086472/')
-                p SG Meteorites 0.4 - Meteor i18n and Build Plugins Development
-                  span on 16 Jun, Mon
-                p.tagline by Meteor Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/184248862/')
-                p June Meetup
-                  span on 17 Jun, Tue
-                p.tagline by Singapore JS
-            li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/188030392/')
                 p Code Dojo - Medicine Clash
                   span on 17 Jun, Tue
@@ -105,6 +90,11 @@ html(lang='en')
                 p Meetup #21: EC2 to VPC using Chef
                   span on 24 Jun, Tue
                 p.tagline by DevOps Singapore
+            li
+              a(href='https://www.facebook.com/events/770029816370173/')
+                p 2nd Gophers Meetup
+                  span on 25 Jun, Wed
+                p.tagline by Singapore Gophers
             li
               a(href='https://www.facebook.com/events/504465599653109')
                 p Personal Finance for Hackers (& Painters)
