--- a/views/index.jade
+++ b/views/index.jade
@@ -61,31 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/188030392/')
-                p Code Dojo - Medicine Clash
-                  span on 17 Jun, Tue
-                p.tagline by Software Craftsmanship Singapore
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/166085312/')
-                p R & Hadoop (TBC)
-                  span on 18 Jun, Wed
-                p.tagline by R User Group - Singapore
-            li
-              a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/185826722/')
-                p PUGS Meetup #4
-                  span on 19 Jun, Thu
-                p.tagline by PUGS (Postgres User Group Singapore)
-            li
-              a(href='https://www.facebook.com/events/1409045022708727')
-                p Building web apps with Martini-go and Gorm
-                  span on 20 Jun, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/1434203866849774/')
-                p A Day with Swift
-                  span on 21 Jun, Sat
-                p.tagline by iOS Dev Scout
-            li
               a(href='http://www.meetup.com/devops-singapore/events/187246762/')
                 p Meetup #21: EC2 to VPC using Chef
                   span on 24 Jun, Tue
@@ -96,10 +71,25 @@ html(lang='en')
                   span on 25 Jun, Wed
                 p.tagline by Singapore Gophers
             li
+              a(href='https://www.facebook.com/events/1497117847171272')
+                p Singapore HCI June Meeting: Tomorrow´s Hospice is...a service for life
+                  span on 25 Jun, Wed
+                p.tagline by Singapore HCI
+            li
               a(href='https://www.facebook.com/events/504465599653109')
                 p Personal Finance for Hackers (& Painters)
                   span on 27 Jun, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/345784212236274')
+                p Makers' Block: A Build, Craft & Design Experience
+                  span on 27 Jun, Fri
+                p.tagline by Hyperflow
+            li
+              a(href='https://www.facebook.com/events/326353344184716')
+                p Makers' Meetup goes to the Mall!
+                  span on 27 Jun, Fri
+                p.tagline by Singapore Makers
             li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525612/')
                 p MOOC Study Group @ Data Science SG
@@ -116,10 +106,20 @@ html(lang='en')
                   span on 28 Jun, Sat
                 p.tagline by DataScience SG
             li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525612/')
+                p MOOC Study Group @ Data Science SG
+                  span on 28 Jun, Sat
+                p.tagline by DataScience SG
+            li
               a(href='https://www.facebook.com/events/672712992807376')
                 p Practical Core Data / Building Apple TV Apps
                   span on 4 Jul, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/654243948000053')
+                p Screening of Aaron Swartz documentary "The Internet's Own Boy"
+                  span on 4 Jul, Fri
+                p.tagline by Hackerspace SG
             li
               a(href='https://www.facebook.com/events/1409045022708727')
                 p Building web apps with Martini-go and Gorm
