events and podcast

--- a/views/index.jade
+++ b/views/index.jade
@@ -61,55 +61,20 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/devops-singapore/events/187246762/')
-                p Meetup #21: EC2 to VPC using Chef
-                  span on 24 Jun, Tue
-                p.tagline by DevOps Singapore
-            li
-              a(href='https://www.facebook.com/events/770029816370173/')
-                p 2nd Gophers Meetup
-                  span on 25 Jun, Wed
-                p.tagline by Singapore Gophers
-            li
-              a(href='https://www.facebook.com/events/1497117847171272')
-                p Singapore HCI June Meeting: Tomorrow´s Hospice is...a service for life
-                  span on 25 Jun, Wed
-                p.tagline by Singapore HCI
-            li
-              a(href='https://www.facebook.com/events/504465599653109')
-                p Personal Finance for Hackers (& Painters)
-                  span on 27 Jun, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/345784212236274')
-                p Makers' Block: A Build, Craft & Design Experience
-                  span on 27 Jun, Fri
-                p.tagline by Hyperflow
-            li
-              a(href='https://www.facebook.com/events/326353344184716')
-                p Makers' Meetup goes to the Mall!
-                  span on 27 Jun, Fri
-                p.tagline by Singapore Makers
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525612/')
-                p MOOC Study Group @ Data Science SG
-                  span on 28 Jun, Sat
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/191753992/')
+                p Global Member of OWASP, Jim Manico in Singapore (30th June - 4th July)
+                  span on 30 Jun, Mon
                 p.tagline by DataScience SG
             li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/186629472/')
-                p Rails Girls
-                  span on 28 Jun, Sat
-                p.tagline by Singapore Ruby Group
+              a(href='http://www.meetup.com/Hadoop-SG/events/190872062/')
+                p BigData/HadoopSG meetup (July)
+                  span on 1 Jul, Tue
+                p.tagline by Hadoop.SG
             li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525632/')
-                p DataScience SG Meetup
-                  span on 28 Jun, Sat
-                p.tagline by DataScience SG
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525612/')
-                p MOOC Study Group @ Data Science SG
-                  span on 28 Jun, Sat
-                p.tagline by DataScience SG
+              a(href='http://www.meetup.com/Agile-Singapore/events/178148862/')
+                p Jun/2014 - Open Space
+                  span on 1 Jul, Tue
+                p.tagline by Agile Singapore
             li
               a(href='https://www.facebook.com/events/672712992807376')
                 p Practical Core Data / Building Apple TV Apps
@@ -120,6 +85,11 @@ html(lang='en')
                 p Screening of Aaron Swartz documentary "The Internet's Own Boy"
                   span on 4 Jul, Fri
                 p.tagline by Hackerspace SG
+            li
+              a(href='http://www.meetup.com/Meteor-Singapore/events/190381122/')
+                p Learning Meteor Together SG - Discover Meteor
+                  span on 8 Jul, Tue
+                p.tagline by Meteor Singapore
             li
               a(href='https://www.facebook.com/events/1409045022708727')
                 p Building web apps with Martini-go and Gorm
