--- a/views/index.jade
+++ b/views/index.jade
@@ -60,11 +60,7 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/191753992/')
-                p Global Member of OWASP, Jim Manico in Singapore (30th June - 4th July)
-                  span on 30 Jun, Mon
-                p.tagline by DataScience SG
+
             li
               a(href='http://www.meetup.com/Hadoop-SG/events/190872062/')
                 p BigData/HadoopSG meetup (July)
@@ -90,6 +86,11 @@ html(lang='en')
                 p Learning Meteor Together SG - Discover Meteor
                   span on 8 Jul, Tue
                 p.tagline by Meteor Singapore
+            li
+              a(href='https://www.facebook.com/events/1439804029620137')
+                p Creative Crew July Talk
+                  span on 8 Jul, Tue
+                p.tagline by Creative Crew
             li
               a(href='https://www.facebook.com/events/1409045022708727')
                 p Building web apps with Martini-go and Gorm
