--- a/views/index.jade
+++ b/views/index.jade
@@ -62,16 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/Hadoop-SG/events/190872062/')
-                p BigData/HadoopSG meetup (July)
-                  span on 1 Jul, Tue
-                p.tagline by Hadoop.SG
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/178148862/')
-                p Jun/2014 - Open Space
-                  span on 1 Jul, Tue
-                p.tagline by Agile Singapore
-            li
               a(href='https://www.facebook.com/events/672712992807376')
                 p Practical Core Data / Building Apple TV Apps
                   span on 4 Jul, Fri
@@ -101,6 +91,11 @@ html(lang='en')
                 p REST API best practices
                   span on 18 Jul, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/484847318325731')
+                p PHP Meetup (July 2014)
+                  span on 29 Jul, Tue
+                p.tagline by Singapore PHP User Group
 
         section
           h3 open source
