--- a/views/index.jade
+++ b/views/index.jade
@@ -60,17 +60,6 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-
-            li
-              a(href='https://www.facebook.com/events/672712992807376')
-                p Practical Core Data / Building Apple TV Apps
-                  span on 4 Jul, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/654243948000053')
-                p Screening of Aaron Swartz documentary "The Internet's Own Boy"
-                  span on 4 Jul, Fri
-                p.tagline by Hackerspace SG
             li
               a(href='http://www.meetup.com/Meteor-Singapore/events/190381122/')
                 p Learning Meteor Together SG - Discover Meteor
@@ -82,20 +71,65 @@ html(lang='en')
                   span on 8 Jul, Tue
                 p.tagline by Creative Crew
             li
+              a(href='https://www.facebook.com/events/1519349764954916')
+                p What's New in Adobe InDesign CC (2014) and Adobe Muse!
+                  span on 9 Jul, Wed
+                p.tagline by Mark Plunkett
+            li
+              a(href='https://www.facebook.com/events/677284805679227')
+                p "PyCon SG 2015 Committee".__init__(self, you, everyone)
+                  span on 10 Jul, Thu
+                p.tagline by Python User Group Singapore
+            li
               a(href='https://www.facebook.com/events/1409045022708727')
                 p Building web apps with Martini-go and Gorm
                   span on 11 Jul, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/192768632/')
+                p July Meetup
+                  span on 15 Jul, Tue
+                p.tagline by Singapore Ruby Group
+            li
+              a(href='http://www.meetup.com/golangsg/events/188059562/')
+                p GoSG July Meetup
+                  span on 15 Jul, Tue
+                p.tagline by GoSG
+            li
+              a(href='http://www.meetup.com/Singapore-WebRTC-Meetup/events/192817812/')
+                p feedback from June's webRTC events in USA.
+                  span on 17 Jul, Thu
+                p.tagline by Singapore WebRTC
             li
               a(href='https://www.facebook.com/events/518584511581520')
                 p REST API best practices
                   span on 18 Jul, Fri
                 p.tagline by Hackers and Painters
             li
+              a(href='https://www.facebook.com/events/669199296501294')
+                p iOS Dev Scout # July Meetup
+                  span on 21 Jul, Mon
+                p.tagline by iOS Dev Scout
+            li
+              a(href='http://www.meetup.com/Meteor-Singapore/events/190871092/')
+                p Learning Meteor Together SG - Discover Meteor
+                  span on 22 Jul, Tue
+                p.tagline by Meteor Singapore
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525712/')
+                p DataScience SG Meetup - Julia
+                  span on 26 Jul, Sat
+                p.tagline by DataScience SG
+            li
               a(href='https://www.facebook.com/events/484847318325731')
                 p PHP Meetup (July 2014)
                   span on 29 Jul, Tue
                 p.tagline by Singapore PHP User Group
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/178149042/')
+                p Jul/2014 - Open Space
+                  span on 29 Jul, Tue
+                p.tagline by Agile Singapore
 
         section
           h3 open source
