--- a/views/index.jade
+++ b/views/index.jade
@@ -61,16 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Meteor-Singapore/events/190381122/')
-                p Learning Meteor Together SG - Discover Meteor
-                  span on 8 Jul, Tue
-                p.tagline by Meteor Singapore
-            li
-              a(href='https://www.facebook.com/events/1439804029620137')
-                p Creative Crew July Talk
-                  span on 8 Jul, Tue
-                p.tagline by Creative Crew
-            li
               a(href='https://www.facebook.com/events/1519349764954916')
                 p What's New in Adobe InDesign CC (2014) and Adobe Muse!
                   span on 9 Jul, Wed
@@ -80,6 +70,11 @@ html(lang='en')
                 p "PyCon SG 2015 Committee".__init__(self, you, everyone)
                   span on 10 Jul, Thu
                 p.tagline by Python User Group Singapore
+            li
+              a(href='http://www.meetup.com/NEAN-Singapore-Meetup/events/183862432/')
+                p Building Realtime Apps using Node/Socket.IO, Mongo and Angular
+                  span on 11 Jul, Fri
+                p.tagline by Singapore NEAN developer Group (JS)
             li
               a(href='https://www.facebook.com/events/1409045022708727')
                 p Building web apps with Martini-go and Gorm
@@ -95,6 +90,11 @@ html(lang='en')
                 p GoSG July Meetup
                   span on 15 Jul, Tue
                 p.tagline by GoSG
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/193467102/')
+                p DataScience SG Meetup - HR Analytics
+                  span on 16 Jul, Wed
+                p.tagline by DataScience SG
             li
               a(href='http://www.meetup.com/Singapore-WebRTC-Meetup/events/192817812/')
                 p feedback from June's webRTC events in USA.
