--- a/views/index.jade
+++ b/views/index.jade
@@ -61,16 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/1519349764954916')
-                p What's New in Adobe InDesign CC (2014) and Adobe Muse!
-                  span on 9 Jul, Wed
-                p.tagline by Mark Plunkett
-            li
-              a(href='https://www.facebook.com/events/677284805679227')
-                p "PyCon SG 2015 Committee".__init__(self, you, everyone)
-                  span on 10 Jul, Thu
-                p.tagline by Python User Group Singapore
-            li
               a(href='http://www.meetup.com/NEAN-Singapore-Meetup/events/183862432/')
                 p Building Realtime Apps using Node/Socket.IO, Mongo and Angular
                   span on 11 Jul, Fri
@@ -120,6 +110,11 @@ html(lang='en')
                 p DataScience SG Meetup - Julia
                   span on 26 Jul, Sat
                 p.tagline by DataScience SG
+            li
+              a(href='https://www.facebook.com/events/660598944024711/')
+                p Introduction to Python Tutorial
+                  span on 26 Jul, Sat
+                p.tagline by PyLadies SG
             li
               a(href='https://www.facebook.com/events/484847318325731')
                 p PHP Meetup (July 2014)
