--- a/views/index.jade
+++ b/views/index.jade
@@ -61,16 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/NEAN-Singapore-Meetup/events/183862432/')
-                p Building Realtime Apps using Node/Socket.IO, Mongo and Angular
-                  span on 11 Jul, Fri
-                p.tagline by Singapore NEAN developer Group (JS)
-            li
-              a(href='https://www.facebook.com/events/1409045022708727')
-                p Building web apps with Martini-go and Gorm
-                  span on 11 Jul, Fri
-                p.tagline by Hackers and Painters
-            li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/192768632/')
                 p July Meetup
                   span on 15 Jul, Tue
@@ -105,6 +95,11 @@ html(lang='en')
                 p Learning Meteor Together SG - Discover Meteor
                   span on 22 Jul, Tue
                 p.tagline by Meteor Singapore
+            li
+              a(href='http://www.meetup.com/dribbble/Singapore-SG/1180132/')
+                p Dribbble Meetup July 2014
+                  span on 22 Jul, Tue
+                p.tagline by Singapore Dribbble Community
             li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525712/')
                 p DataScience SG Meetup - Julia
