events for webuild

--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,7 @@ html(lang='en')
     link(rel='apple-touch-icon', sizes='114x114', href='public/apple-touch-icon-114x114-precomposed.png')
     link(rel='apple-touch-icon', sizes='144x144', href='public/apple-touch-icon-144x144-precomposed.png')
 
-    script(type='text/javascript', src='public/js/require.js', data-main='public/js/config')
+    //- script(type='text/javascript', src='public/js/require.js', data-main='public/js/config')
 
   body
 
@@ -135,7 +135,7 @@ html(lang='en')
           h3 open source
           ul.open-list.second
             - for (var i = 0; i < 14; ++i) {
-              li
+                li
             - }
 
         p.explain a list of free public events and open source projects for the curious folks who love to make things!
