Cap displayed repos and meetups to 10 each Only show repos with min 200 stars

--- a/views/index.jade
+++ b/views/index.jade
@@ -70,7 +70,7 @@ html(lang='en')
         section
           h3 open source
           ul.open-list.second
-            each repo in github.repos
+            each repo in github
               li
                 a(href=repo.html_url)
                   p= repo.name
