pull api from we build live to get the podcast timeing

--- a/views/index.jade
+++ b/views/index.jade
@@ -53,7 +53,7 @@ html(lang='en')
       .main.container
 
         div.live
-          h3 Catch We Build SG LIVE
+          h3 Catch We Build LIVE
           p.countdown
           p#livetime
 
@@ -87,14 +87,14 @@ html(lang='en')
             [connections.sg](http://connections.sg/),
             [hackerspace](http://hackerspace.sg/calendar/hackerspacesg-events/),
             [bHappening](http://bhappening.wordpress.com/) and
-            [sge calendar](http://sge.io/calendar/)
+            [tech in asia](http://www.techinasia.com/tech-startup-events/)
       ul.social
         li
-          a(href='https://twitter.com/intent/tweet?hashtags=webuildSGLive&original_referer=http%3A%2F%2Flive.webuild.sg%2F&text=@webuildsg&tw_p=tweetbutton')
+          a(href='https://twitter.com/webuildsg')
             != '&#xe286;'
         li
           a(href='http://www.facebook.com/webuildsg')
             != '&#xe227;'
         li
-          a(href='https://plus.google.com/115395182582724849094')
+          a(href='https://github.com/webuildsg')
             != '&#xe239;'
