minified css and js with grunt task

--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,7 @@ html(lang='en')
     link(rel='apple-touch-icon', sizes='114x114', href='public/apple-touch-icon-114x114-precomposed.png')
     link(rel='apple-touch-icon', sizes='144x144', href='public/apple-touch-icon-144x144-precomposed.png')
 
-    script(type='text/javascript', src='public/js/require.js', data-main='public/js/config')
+    script(src='public/js/script.js')
 
   body
 
