--- a/views/facebook_login.jade
+++ b/views/facebook_login.jade
@@ -39,7 +39,7 @@ html(lang='en')
               li developers
               li makers
       .main.container
-        div#auth0(style='width: 320px; margin: 40px auto; padding: 10px; border-style: dashed; border-width: 1px;')
+        div#auth0(style='width: 320px; margin: 40px auto;')
 
     script(type='text/javascript', src='https://cdn.auth0.com/w2/auth0-widget-4.0.min.js')
     script(type='text/javascript').
