--- a/public/css/foundation/layout.sass
+++ b/public/css/foundation/layout.sass
@@ -10,9 +10,6 @@
 
 *
 	box-sizing: border-box
-	@include transition-property(all)
-	@include transition-duration(0.2s)
-	@include transition-timing-function(ease-in)
 
 body
 	background-color: white
@@ -29,7 +26,7 @@ body
 header
 	width: 100%
 	background-color: $red
-	@include box-shadow(lighten(black, 50%) 0 3px 10px)
+	@include box-shadow(lighten(black, 50%), 0, 3px, 10px)
 	padding: 0 0 15px 0
 
 .main
