replaced footer social fonts with github icon and bigger size

--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -67,7 +67,7 @@
   font-family: 'Social'
   font-size: 3rem
   font-size: 4vw
-  margin: 0 auto 2rem auto
+  margin: 2rem auto
   padding: 0 calc(50% - 60%/2)
   li
     width: 30%
