--- a/views/index.jade
+++ b/views/index.jade
@@ -91,10 +91,10 @@ html(lang='en')
       ul.social
         li
           a(href='https://twitter.com/webuildsg')
-            != '&#xe286;'
+            span.icon-twitter
         li
           a(href='http://www.facebook.com/webuildsg')
-            != '&#xe227;'
+            span.icon-facebook
         li
           a(href='https://github.com/webuildsg')
-            != '&#xe239;'
+            span.icon-github
