amended anchor image to an icon

--- a/public/css/foundation/icons.sass
+++ b/public/css/foundation/icons.sass
@@ -16,6 +16,9 @@
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
+.icon-link:before
+  content: "\e600"
+
 .icon-facebook:before
   content: "\e609"
 
