--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -54,9 +54,12 @@
         background-color: lighten($yellow, 10%)
       .anchor
         display: block
+        &:hover
+          color: $white
+          background: $blue
     a
       display: block
-      padding: 10px
+      padding: 10px 40px 10px 10px
       @include border-radius(5px)
       text-decoration: none
     .stars
@@ -64,15 +67,14 @@
       padding-top: 6px
 
     .anchor
-      background: transparent url(../link-anchor.png) top left no-repeat  
-      width: 12px
-      height: 12px
+      width: 30px
+      height: 30px
       display: none
-      padding: 0 !important
-      text-indent: -2000em
+      padding: 5px !important
       position: absolute
-      right: 10px
-      top: 10px
+      right: 15px
+      top: 15px
+      color: $grey
 
 .first
   border-right: 2px solid $blue
