added calendar download in the UI. fixed #7

--- a/public/css/foundation/icons.sass
+++ b/public/css/foundation/icons.sass
@@ -16,8 +16,8 @@
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
-.icon-link:before
-  content: "\e600"
+.icon-calendar:before
+  content: "\e60b"
 
 .icon-facebook:before
   content: "\e609"
