--- a/public/css/foundation/responsive.sass
+++ b/public/css/foundation/responsive.sass
@@ -27,6 +27,9 @@
   .social
     width: 100%
     font-size: 10vw
+    padding: 0
+    li
+      width: 20%
 
 @media only screen and (max-width: 380px)
   h1
