--- a/views/index.jade
+++ b/views/index.jade
@@ -95,6 +95,9 @@ html(lang='en')
         li
           a(href='https://github.com/webuildsg')
             span.icon-github
+        li
+          a(href='/cal')
+            span.icon-calendar
 
     script(src='public/js/script.js')
     script.
