events clasher implement

--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -64,6 +64,19 @@
 .first
   border-right: 2px solid $blue
 
+.event-checker
+  display: block
+  margin: 0 auto
+  font-size: 2rem
+  padding: .5rem
+  border: 0
+  background: lighten($yellow, 10%)
+  font-family: $sans
+  color: $grey
+  margin: 2rem auto
+  &:focus
+    background: $yellow, 10%
+
 .social
   font-family: 'Social'
   font-size: 3rem
