--- a/views/index.jade
+++ b/views/index.jade
@@ -75,7 +75,12 @@ html(lang='en')
                     span.stars!= '&#9733; ' + repo.stargazers_count
                   p.tagline= repo.description
 
+        h3 check for event clashes
+        input#check.event-checker(type='date', placeholder='dd/mm/yyyy')
+        ul#clashed.open-list
+
         p.explain a list of free public events and open source projects for the curious folks who love to make things!
+
       footer
         .container
           :markdown
