event clasher completed. fixed #21

--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -73,7 +73,8 @@
   background: lighten($yellow, 10%)
   font-family: $sans
   color: $grey
-  margin: 2rem auto
+  margin: 2rem auto 1rem
+  outline: none
   &:focus
     background: $yellow, 10%
 
