fixed unneccesary padding for open list

--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -54,7 +54,7 @@
         background-color: lighten($yellow, 10%)
     a
       display: block
-      padding: 10px 40px 10px 10px
+      padding: 10px
       @include border-radius(5px)
       text-decoration: none
     .stars
