--- a/public/css/lib/normalise.sass
+++ b/public/css/lib/normalise.sass
@@ -7,8 +7,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, nav, sectio
 //Corrects `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
 audio, canvas, video
   display: inline-block
-  *display: inline
-  *zoom: 1
+  // *display: inline
+  // *zoom: 1
 
 // Prevents modern browsers from displaying `audio` without controls.
 // Remove excess height in iOS 5 devices.
@@ -185,7 +185,7 @@ legend
   border: 0
   padding: 0
   white-space: normal
-  *margin-left: -7px
+  // *margin-left: -7px
 
 // 1. Corrects font size not being inherited in all browsers.
 // 2. Addresses margins set differently in IE 6/7, Firefox 3+, Safari 5, and Chrome.
@@ -194,7 +194,7 @@ button, input, select, textarea
   font-size: 100%
   margin: 0
   vertical-align: baseline
-  *vertical-align: middle
+  // *vertical-align: middle
 
 // Addresses Firefox 3+ setting `line-height` on `input` using `!important` in the UA stylesheet.
 button, input
@@ -208,7 +208,7 @@ button, input
 button, html input[type="button"], input[type="reset"], input[type="submit"]
   -webkit-appearance: button
   cursor: pointer
-  *overflow: visible
+//   *overflow: visible
 
 // Re-set default cursor for disabled elements.
 button[disabled], input[disabled]
@@ -220,8 +220,8 @@ button[disabled], input[disabled]
 input[type="checkbox"], input[type="radio"]
   box-sizing: border-box
   padding: 0
-  *height: 13px
-  *width: 13px
+//   *height: 13px
+//   *width: 13px
 
 // 1. Addresses `appearance` set to `searchfield` in Safari 5 and Chrome.
 // 2. Addresses `box-sizing` set to `border-box` in Safari 5 and Chrome (include `-moz` to future-proof).
