--- a/public/css/lib/base.sass
+++ b/public/css/lib/base.sass
@@ -32,6 +32,7 @@ textarea
 // remove webkit scrollbars for input type=number
 input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button
   -webkit-appearance: none
+  -moz-appearance: none
   margin: 0
 
 // Chrome Frame prompt
