--- a/views/index.jade
+++ b/views/index.jade
@@ -52,7 +52,7 @@ html(lang='en')
         div.live
           h3 Catch We Build LIVE
           p.countdown
-          p#livetime
+          p#livetime.time
 
         section
           h3 open events
