--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -12,9 +12,9 @@
     &.countdown
       font-size: 2rem
       margin: 0 0 1.2rem 0
-    &#livetime
-      color: $grey
-      font-size: 0.9rem
+  .time
+    color: $grey
+    font-size: 0.9rem
 
 .people
   display: inline-block
