live box is hyperlinked to the live podcast site. fixed #30

--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -5,6 +5,8 @@
   @include border-radius(5px)
   text-align: center
   padding: .5em
+  display: block
+  text-decoration: none
   &:hover
     cursor: pointer
     background-color: lighten($yellow, 5%)
