--- a/views/index.jade
+++ b/views/index.jade
@@ -49,7 +49,7 @@ html(lang='en')
               li makers
       .main.container
 
-        div.live
+        a.live(href="http://live.webuild.sg")
           h3 Catch We Build LIVE
           p.countdown
           p#livetime.time
